@@ -1,6 +1,7 @@
 package mcjty.rftoolsstorage.modules.scanner.blocks;
 
 import com.google.common.base.Function;
+import com.mojang.authlib.GameProfile;
 import mcjty.lib.api.container.CapabilityContainerProvider;
 import mcjty.lib.api.container.DefaultContainerProvider;
 import mcjty.lib.api.infusable.CapabilityInfusable;
@@ -44,15 +45,13 @@ import net.minecraft.nbt.ListNBT;
 import net.minecraft.tileentity.ITickableTileEntity;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.Direction;
-import net.minecraft.util.RegistryKey;
 import net.minecraft.util.SoundEvents;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.text.StringTextComponent;
 import net.minecraft.util.text.TextFormatting;
-import net.minecraft.world.World;
+import net.minecraft.world.server.ServerWorld;
 import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.util.Constants;
-import net.minecraftforge.common.util.LazyOptional;
+import net.minecraftforge.common.util.*;
 import net.minecraftforge.energy.CapabilityEnergy;
 import net.minecraftforge.items.CapabilityItemHandler;
 import net.minecraftforge.items.IItemHandler;
@@ -97,6 +96,8 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
     // Client side data returned by CMD_SCANNER_INFO
     public static long rfReceived = 0;
     public static boolean exportToCurrentReceived = false;
+
+    private final Lazy<FakePlayer> lazyPlayer = Lazy.of(this::getFakePlayer);
 
     @Override
     public IAction[] getActions() {
@@ -701,6 +702,25 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
         markDirty();
     }
 
+    private boolean canPlayerAccess(FakePlayer fakePlayer, BlockPos p) {
+        if (StorageScannerConfiguration.scannerNoRestrictions.get()) {
+            return true;
+        }
+        return world.getBlockState(p).canEntityDestroy(world, p, fakePlayer);
+    }
+
+    private FakePlayer getFakePlayer() {
+        UUID owner = getOwnerUUID();
+        if (owner == null) {
+            owner = UUID.nameUUIDFromBytes("rftools_storage".getBytes());
+        }
+        FakePlayer player = FakePlayerFactory.get((ServerWorld) world, new GameProfile(owner, "rftools_storage"));
+        player.setWorld(world);
+        player.setPosition(pos.getX(), pos.getY(), pos.getZ());
+        return player;
+    }
+
+
     @Override
     public void clearCachedCounts() {
         cachedCounts.clear();
@@ -722,23 +742,27 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
         inventories = new ArrayList<>();
         craftingInventories = new ArrayList<>();
 
+        FakePlayer fakePlayer = lazyPlayer.get();
+
         for (BlockPos p : old) {
             if (xnetAccess.containsKey(p) || inRange(p)) {
                 TileEntity te = world.getTileEntity(p);
                 if (te != null && !(te instanceof StorageScannerTileEntity)) {
-                    if (te instanceof CraftingManagerTileEntity) {
-                        if (seenPositions.add(p)) {
-                            inventories.add(p);
-                            craftingInventories.add(p);
-                            oldAdded.add(p);
-                        }
-                    } else {
-                        te.getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY).ifPresent(h -> {
+                    if (canPlayerAccess(fakePlayer, p)) {
+                        if (te instanceof CraftingManagerTileEntity) {
                             if (seenPositions.add(p)) {
                                 inventories.add(p);
+                                craftingInventories.add(p);
                                 oldAdded.add(p);
                             }
-                        });
+                        } else {
+                            te.getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY).ifPresent(h -> {
+                                if (seenPositions.add(p)) {
+                                    inventories.add(p);
+                                    oldAdded.add(p);
+                                }
+                            });
+                        }
                     }
                 }
             }
@@ -783,18 +807,20 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
                                  Set<BlockPos> seenPositions, BlockPos p) {
         if (!oldAdded.contains(p)) {
             TileEntity te = world.getTileEntity(p);
-            if (te != null && !(te instanceof StorageScannerTileEntity)) {
-                if (te instanceof CraftingManagerTileEntity) {
-                    if (seenPositions.add(p)) {
-                        inventories.add(p);
-                        craftingInventories.add(p);
-                    }
-                } else if (!inventories.contains(p)) {
-                    te.getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY).ifPresent(h -> {
+            if (canPlayerAccess(lazyPlayer.get(), p)) {
+                if (te != null && !(te instanceof StorageScannerTileEntity)) {
+                    if (te instanceof CraftingManagerTileEntity) {
                         if (seenPositions.add(p)) {
                             inventories.add(p);
+                            craftingInventories.add(p);
                         }
-                    });
+                    } else if (!inventories.contains(p)) {
+                        te.getCapability(CapabilityItemHandler.ITEM_HANDLER_CAPABILITY).ifPresent(h -> {
+                            if (seenPositions.add(p)) {
+                                inventories.add(p);
+                            }
+                        });
+                    }
                 }
             }
         }
@@ -811,9 +837,11 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
         if (getStoredPower() < StorageScannerConfiguration.rfPerRequest.get()) {
             return ItemStack.EMPTY;
         }
+        FakePlayer fakePlayer = lazyPlayer.get();
         return inventories.stream()
                 .filter(p -> isOutputFromAuto(p) && ((!doRoutable) || isRoutable(p)))
                 .filter(p -> !(world.getTileEntity(p) instanceof CraftingManagerTileEntity))
+                .filter(p -> canPlayerAccess(fakePlayer, p))
                 .map(this::getItemHandlerAt)
                 .map(handler -> handler.map(h -> {
                     for (int i = 0; i < h.getSlots(); i++) {
@@ -843,9 +871,11 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
 
         final ItemStack[] result = {ItemStack.EMPTY};
         final int[] cnt = {match.getMaxStackSize() < amount ? match.getMaxStackSize() : amount};
+        FakePlayer fakePlayer = lazyPlayer.get();
         inventories.stream()
                 .filter(p -> isOutputFromAuto(p) && (!doRoutable) || isRoutable(p))
                 .filter(p -> !(world.getTileEntity(p) instanceof CraftingManagerTileEntity))
+                .filter(p -> canPlayerAccess(fakePlayer, p))
                 .map(this::getItemHandlerAt)
                 .allMatch(handler -> {
                     handler.ifPresent(h -> {
@@ -916,9 +946,11 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
     public ItemStack insertInternal(ItemStack stack, boolean simulate) {
         final ItemStack[] toInsert = {stack.copy()};
 
+        FakePlayer fakePlayer = lazyPlayer.get();
         Iterator<LazyOptional<IItemHandler>> iterator = inventories.stream()
                 .filter(p -> isInputFromAuto(p) && (!p.equals(getPos()) && isRoutable(p) && getInputMatcher(p).test(stack)))
                 .filter(p -> !(world.getTileEntity(p) instanceof CraftingManagerTileEntity))
+                .filter(p -> canPlayerAccess(fakePlayer, p))
                 .map(this::getItemHandlerAt)
                 .filter(LazyOptional::isPresent)
                 .iterator();
@@ -1062,8 +1094,10 @@ public class StorageScannerTileEntity extends GenericTileEntity implements ITick
         }
 
         if (invPos.getY() == -1) {
+            FakePlayer fakePlayer = lazyPlayer.get();
             Iterator<BlockPos> iterator = inventories.stream()
                     .filter(p -> !(world.getTileEntity(p) instanceof CraftingManagerTileEntity))
+                    .filter(p -> canPlayerAccess(fakePlayer, p))
                     .filter(p -> isOutputFromGui(p) && isRoutable(p))
                     .iterator();
             while (iterator.hasNext()) {
