@@ -1,3 +1,6 @@
+Upcoming:
+- By default the storage scanner will no longer be able to scan inventories that don't belong to the player that placed the storage scanner. There is a new scannerNoRestrictions configuration flag that you can use to go back to the old behaviour
+
 1.16-2.0.11:
 - The crafting grid in the modular storage and storage scanner shows the missing items again
 - Fixed a few tooltip problems in the modular storage block
